--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
 <body>
     <canvas id="canvas1"></canvas>
-    <button class="selection" id="rain" onclick="rain()">RAIN</button>
-    <button class="selection" id="leaves" onclick="leaves()">LEAVES</button>
-    <button class="selection" id="waterfall">WATERFALL</button>
-    <button id="stop" onclick="pause(animationId)">STOP</button>
-    <br>
-    <button id="start" onclick="start()">START</button>
+    <div id="header">
+        <button class="selection" id="rain" onclick="rain()">RAIN</button>
+        <img class="selection" id="start" alt="pause-play-button" onclick="playPause(animationId)"
+            src="./images/pause-play-button.png"></img>
+        <button class="selection" id="waterfall">WATERFALL</button>
+    </div>
+
+    <div id="footer">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
+            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
     <script src="script.js"></script>
 </body>
 
