add waterfall, disabling functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button class="selection" id="rain" onclick="rain()">RAIN</button>
         <img class="selection" id="start" alt="pause-play-button" onclick="playPause(animationId)"
             src="./images/pause-play-button.png"></img>
-        <button class="selection" id="waterfall">WATERFALL</button>
+        <button class="selection" id="waterfall" onclick="waterfall()">WATERFALL</button>
     </div>
 
     <div id="footer">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
