add and view brown div to canvasclick

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <canvas id="canvas1"></canvas>
+    <div id="canvas-wrapper">
+        <canvas id="canvas1"></canvas>
+    </div>
     <div id="header">
         <button class="selection" id="rain" onclick="rain()">RAIN</button>
         <img class="selection" id="start" alt="pause-play-button" onclick="playPause(animationId)"
