--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div id="canvas-wrapper">
         <canvas id="canvas1"></canvas>
     </div>
-    <div id="header">
-        <button class="selection" id="rain" onclick="rain()">RAIN</button>
+    <div id="header" data-testid="header">
+        <button class="selection" id="rain" onclick="choose('rain')">RAIN</button>
         <img class="selection" id="start" alt="pause-play-button" onclick="playPause(animationId)"
             src="./images/pause-play-button.png"></img>
-        <button class="selection" id="waterfall" onclick="waterfall()">WATERFALL</button>
+        <button class="selection" id="waterfall" onclick="choose('waterfall')">WATERFALL</button>
     </div>
 
-    <div id="footer">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a
-            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div id="footer" data-testid="footer">Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a>
+        from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
     <script src="script.js"></script>
 </body>
