messy test file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="canvas-wrapper">
-        <canvas id="canvas1"></canvas>
+        <canvas id="canvas1" data-testid="canvas1"></canvas>
     </div>
     <div id="header" data-testid="header">
         <button class="selection" id="rain" onclick="choose('rain')">RAIN</button>
